<resources>
    <string name="app_name">Burbujas</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings del layout LOGIN -->
    <string name="titleBienvenidoLogin">WELCOME!</string>
    <string name="textBtnGuardarLogin">Guardar</string>
    <string name="textDescripcionLogin">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industrys standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
    </string>
    <string name="editTextNameLogin">Nombre</string>
    <string name="editTextCelularLogin">Celular</string>
    <string name="editTextIdLogin">Identifiacion</string>
    <string name="editTextIdDir">Direccion</string>

    <string name="textMarcaCardView">Marca</string>
    <string name="textViewNumHoras">Horas de Uso:</string>
    <string name="textBtnEdit">Guardar</string>
    <string name="textFechaInicio">Fecha Inicio:</string>
    <string name="textHoras">Horas:</string>
    <string name="textTotalPago">Total Pago:</string>

    <string name="hintHoraUso">Numero de Hoas</string>
    <string name="hintPesos">$0</string>

    <string name="tabHome">Home</string>
    <string name="tabFavoritos">Favoritos</string>
    <string name="tabPerfil">Perfil</string>
    <string name="tabReservas">Reservas</string>
    <string name="toastUsuarioRegistrado">USUARIO REGISTRADO</string>
    <string name="toastSinUsuarioRegistrado">EL USUARIO DEBE REGISTRARSE</string>
    <string name="toastGuardados">Datos Almacenados</string>
    <string name="toastNoGuardados">Datos No Almacenados</string>
    <string name="toastSinGuardar">Sin Datos Internos</string>

    <string name="toastDatosSinRecuperar">DATOS NO RECUPERADOS</string>

    <string name="toastDatosUpdate">Datos Actualizados</string>


    <string name="tabHome2">Home</string>


</resources>
