<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TimeActivity"
        android:background="@color/colorWhite"
>


    <ImageView
            android:layout_width="180dp"
            android:layout_height="182dp"
            app:srcCompat="@color/cardview_dark_background"
            android:scaleType="centerCrop"
            android:id="@+id/imgLavadora"
            android:padding="@dimen/paddingImg"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline"/>

    <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="233dp"/>
    <TextView
            android:text="@string/textFechaInicio"
            android:layout_width="@dimen/textViewWidth"
            android:layout_height="@dimen/textViewHeight"
            android:gravity="center_vertical"
            android:textSize="@dimen/txtSize"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_thin"
            android:id="@+id/txtViewFechaI" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline" tools:text="Fecha Inicio:"/>
    <TextView
            android:text="@string/textViewNumHoras"
            android:layout_width="@dimen/textViewWidth"
            android:layout_height="@dimen/textViewHeight"
            android:gravity="center_vertical"
            android:textSize="@dimen/txtSize"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_thin"
            android:id="@+id/txtViewHoras"
            tools:text="Horas:"
            tools:ignore="MissingConstraints" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtViewFechaI"
            app:layout_constraintStart_toStartOf="@+id/txtViewFechaI"/>
    <TextView
            android:text="@string/textTotalPago"
            android:layout_width="@dimen/textViewWidth"
            android:layout_height="@dimen/textViewHeight"
            android:gravity="center_vertical"
            android:textSize="@dimen/txtSize"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_thin"
            android:id="@+id/txtViewT" app:layout_constraintStart_toStartOf="@+id/txtViewHoras"
            tools:text="Total Pago" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtViewHoras"/>
    <EditText
            android:layout_width="@dimen/editViewWidth"
            android:layout_height="@dimen/editViewHeight"
            android:inputType="date"
            android:hint="nov 11"
            android:ems="10"
            android:textSize="@dimen/txtSize"
            android:fontFamily="@font/roboto_thin"

            android:backgroundTint="@color/textSecondary"
            android:id="@+id/editTxtFechaI" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/txtViewFechaI"
            android:layout_marginStart="4dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtViewFechaI"
            app:layout_constraintBottom_toTopOf="@+id/txtViewFechaI"/>
    <EditText
            android:layout_width="@dimen/editViewWidth"
            android:layout_height="@dimen/editViewHeight"
            android:inputType="number"
            android:hint="Numero Horas"
            android:ems="10"
            android:textSize="@dimen/txtSize"
            android:fontFamily="@font/roboto_thin"
            android:id="@+id/editTxtHoras"

            android:backgroundTint="@color/textSecondary"
            tools:ignore="MissingConstraints" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editTxtFechaI"
            app:layout_constraintStart_toStartOf="@+id/editTxtFechaI"
            app:layout_constraintEnd_toEndOf="@+id/editTxtFechaI" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:layout_width="@dimen/editViewWidth"
            android:layout_height="@dimen/editViewHeight"
            android:hint="$0"
            android:textColor="@color/colorBtn"
            android:ems="10"
            android:gravity="center_vertical"
            android:textSize="@dimen/txtSize"

            android:backgroundTint="@color/textSecondary"
            android:cursorVisible="false"
            android:fontFamily="@font/roboto_thin"
            android:id="@+id/txtViewTPagar"
            app:layout_constraintStart_toStartOf="@+id/editTxtHoras"
            app:layout_constraintEnd_toEndOf="@+id/editTxtHoras"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/editTxtHoras"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="ACEPTAR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15dp"
            android:textStyle="bold"
            android:backgroundTint="@color/colorBtn"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
            android:background="@drawable/button_style"
            android:id="@+id/btnAceptarTiempo"
            tools:text=" ACEPTAR     "
            android:drawableRight="@drawable/ic_send_black_24dp"
            android:layout_marginTop="35dp"
            app:layout_constraintTop_toBottomOf="@+id/txtViewTPagar" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
            android:id="@+id/imgStarId"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/colorYellow"
            android:clickable="true"
            app:srcCompat="@drawable/ic_star_half_black_24dp"
            app:layout_constraintStart_toEndOf="@+id/imgDelete"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/btnAceptarTiempo" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/btnAceptarTiempo"/>

    <ImageView
            android:id="@+id/imgDelete"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_delete_black_24dp"
            app:layout_constraintStart_toStartOf="@+id/btnAceptarTiempo" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/imgStarId"
            app:layout_constraintTop_toTopOf="@+id/imgStarId" app:layout_constraintBottom_toBottomOf="@+id/imgStarId"
            app:layout_constraintVertical_bias="0.0"/>

</android.support.constraint.ConstraintLayout>